When the cost < 0, the ML minimizer now only throws an error if exit_on_convergence_fail=true, otherwise it will simply stop minimizing and set the fail bit Added option to fit_simple to print the jackknife samples of the data

--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,6 +1,6 @@
 exampledir = $(prefix)/example
 testdir = $(prefix)/test
-bin_PROGRAMS = analyze_ktopipi_gparity analyze_ktopipi_mixdiags_sampleAMA autocorrelation bin compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gnd_exc_ktosigma_combined_gparity_bootstrap fit_ktopipi_gnd_exc_ktosigma_combined_gparity fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA_sum fit_ktopipi_ktosigma_combined_gparity fit_ktopipi_optimal_bootstrap fit_ktosigma_gparity fit_mpi_gparity_AMA fit_pipi_gnd_exc_sigma_sim_GEVP_gparity_bootstrap fit_pipi_gnd_exc_sigma_sim_GEVP_gparity fit_pipi_gnd_exc_sigma_sim_gparity_bootstrap fit_pipi_gnd_exc_sigma_sim_gparity fit_pipi_gnd_exc_sigma_sim_gparity_pboot fit_pipi_gnd_exc_sim_gparity fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_pipi_multiop_comoving_GEVP_gparity fit_pipi_multiop_comoving_GEVP_gparity_bootstrap fit_pipi_multiop_comoving_gparity_bootstrap fit_pipi_multiop_comoving_gparity fit_pipi_optimal_bootstrap fit_pipi_sigma_GEVP_gparity fit_pipi_sigma_sim_gparity fit_pipi_sigma_sim_gparity_sampleAMA fit_pipitosigma_gparity fit_resampled_results fit_sigmasigma_gparity fit_simple_AMA fit_simple_bootstrap fit_simple fit_simple_sampleAMA fit_simultaneous gaussian_jackknife global_fit hdf5_calc hdf5_combine hdf5_print hdf5_superjackknife_boost integrated_autocorrelation plot_pipi_phaseshift plot_pipi_phaseshift_sdep pvalue
+bin_PROGRAMS = analyze_ktopipi_gparity analyze_ktopipi_mixdiags_sampleAMA autocorrelation bin compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gnd_exc_ktosigma_combined_gparity_bootstrap fit_ktopipi_gnd_exc_ktosigma_combined_gparity fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA_sum fit_ktopipi_ktosigma_combined_gparity fit_ktopipi_optimal_bootstrap fit_ktosigma_gparity fit_mpi_gparity_AMA fit_pipi_gnd_exc_sigma_sim_GEVP_gparity_bootstrap fit_pipi_gnd_exc_sigma_sim_GEVP_gparity fit_pipi_gnd_exc_sigma_sim_gparity_bootstrap fit_pipi_gnd_exc_sigma_sim_gparity fit_pipi_gnd_exc_sigma_sim_gparity_pboot fit_pipi_gnd_exc_sim_gparity fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_pipi_multiop_comoving_GEVP_gparity_bootstrap fit_pipi_multiop_comoving_GEVP_gparity fit_pipi_multiop_comoving_gparity_bootstrap fit_pipi_multiop_comoving_gparity fit_pipi_optimal_bootstrap fit_pipi_sigma_GEVP_gparity fit_pipi_sigma_sim_gparity fit_pipi_sigma_sim_gparity_sampleAMA fit_pipitosigma_gparity fit_resampled_results fit_sigmasigma_gparity fit_simple_AMA fit_simple_bootstrap fit_simple fit_simple_sampleAMA fit_simultaneous gaussian_jackknife global_fit hdf5_calc hdf5_combine hdf5_print hdf5_superjackknife_boost integrated_autocorrelation plot_pipi_phaseshift plot_pipi_phaseshift_sdep pvalue wilson_flow
 analyze_ktopipi_gparity_SOURCES = analyze_ktopipi_gparity.C
 analyze_ktopipi_mixdiags_sampleAMA_SOURCES = analyze_ktopipi_mixdiags_sampleAMA.C
 autocorrelation_SOURCES = autocorrelation.C
@@ -30,8 +30,8 @@ fit_pipi_gparity_SOURCES = fit_pipi_gparity.C
 fit_pipi_gparity_ratio_SOURCES = fit_pipi_gparity_ratio.C
 fit_pipi_gparity_sampleAMA_SOURCES = fit_pipi_gparity_sampleAMA.C
 fit_pipi_ktopipi_sim_gparity_SOURCES = fit_pipi_ktopipi_sim_gparity.C
-fit_pipi_multiop_comoving_GEVP_gparity_SOURCES = fit_pipi_multiop_comoving_GEVP_gparity.C
 fit_pipi_multiop_comoving_GEVP_gparity_bootstrap_SOURCES = fit_pipi_multiop_comoving_GEVP_gparity_bootstrap.C
+fit_pipi_multiop_comoving_GEVP_gparity_SOURCES = fit_pipi_multiop_comoving_GEVP_gparity.C
 fit_pipi_multiop_comoving_gparity_bootstrap_SOURCES = fit_pipi_multiop_comoving_gparity_bootstrap.C
 fit_pipi_multiop_comoving_gparity_SOURCES = fit_pipi_multiop_comoving_gparity.C
 fit_pipi_optimal_bootstrap_SOURCES = fit_pipi_optimal_bootstrap.C
@@ -56,5 +56,6 @@ integrated_autocorrelation_SOURCES = integrated_autocorrelation.C
 plot_pipi_phaseshift_SOURCES = plot_pipi_phaseshift.C
 plot_pipi_phaseshift_sdep_SOURCES = plot_pipi_phaseshift_sdep.C
 pvalue_SOURCES = pvalue.C
+wilson_flow_SOURCES = wilson_flow.C
 AM_CPPFLAGS = -I$(srcdir)/../include -I$(srcdir)/include
 LDADD =../src/libcpsfit.a
