--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -2,5 +2,5 @@ exampledir = $(prefix)/example
 testdir = $(prefix)/test
 bin_PROGRAMS =
 AM_CPPFLAGS = -I$(top_srcdir)/include -I$(srcdir)/include
-LDADD =$(top_builddir)/src/libcpsfit.a
+LDADD =$(top_builddir)/src/libsarlac.a
 SUBDIRS = tools fit misc
