--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -3,4 +3,4 @@ testdir = $(prefix)/test
 bin_PROGRAMS =
 AM_CPPFLAGS = -I$(top_srcdir)/include -I$(srcdir)/include
 LDADD =$(top_builddir)/src/libsarlac.a
-SUBDIRS = tools fit misc
+SUBDIRS = tools fit misc analyze
